fix: disabled x scrollbar, except pisen page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@ body {
 
 body {
 	overflow-y: auto;
-	/* overflow-x: hidden; */
+	overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
